src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-display: swap;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 300;
  src: local("Open Sans Light"), local("OpenSans-Light"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-300.woff2)
      format("woff2"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-300.woff)
      format("woff");
}
@font-face {
  font-display: swap;
  font-family: Open Sans;
  font-style: italic;
  font-weight: 300;
  src: local("Open Sans Light Italic"), local("OpenSans-LightItalic"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-300italic.woff2)
      format("woff2"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-300italic.woff)
      format("woff");
}
@font-face {
  font-display: swap;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 400;
  src: local("Open Sans Regular"), local("OpenSans-Regular"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-regular.woff2)
      format("woff2"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-regular.woff)
      format("woff");
}
@font-face {
  font-display: swap;
  font-family: Open Sans;
  font-style: italic;
  font-weight: 400;
  src: local("Open Sans Italic"), local("OpenSans-Italic"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-italic.woff2)
      format("woff2"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-italic.woff)
      format("woff");
}
@font-face {
  font-display: swap;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 600;
  src: local("Open Sans SemiBold"), local("OpenSans-SemiBold"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-600.woff2)
      format("woff2"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-600.woff)
      format("woff");
}
@font-face {
  font-display: swap;
  font-family: Open Sans;
  font-style: italic;
  font-weight: 600;
  src: local("Open Sans SemiBold Italic"), local("OpenSans-SemiBoldItalic"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-600italic.woff2)
      format("woff2"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-600italic.woff)
      format("woff");
}
@font-face {
  font-display: swap;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 700;
  src: local("Open Sans Bold"), local("OpenSans-Bold"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-700.woff2)
      format("woff2"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-700.woff)
      format("woff");
}
@font-face {
  font-display: swap;
  font-family: Open Sans;
  font-style: italic;
  font-weight: 700;
  src: local("Open Sans Bold Italic"), local("OpenSans-BoldItalic"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-700italic.woff2)
      format("woff2"),
    url(https://cdn.statcdn.com/static/css/fonts/opensans/open-sans-v15-latin-700italic.woff)
      format("woff");
}
@font-face {
  ascent-override: 105%;
  font-family: Open Sans fallback;
  size-adjust: 105.41%;
  src: local("Arial");
}

body,
html {
  -webkit-font-smoothing: antialiased;
  -webkit-text-size-adjust: none;
  color: #444;
  font-family: Open Sans, Open Sans fallback, Helvetica, Arial, Sans-Serif;
  font-size: 15px;
  height: 100%;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  width: 100%;
}

.button--primary,
.button.colOne,
.buttonHover--primary:hover {
  background-color: #0077d5;
  border-color: #0077d5;
  color: #fff;
}
.button--primary:hover,
.button.colOne:hover {
  background-color: #0069bc;
  color: #fff;
}

.button--alpha.button--primary {
  background-color: rgba(11, 133, 229, 0.1);
  color: #0069bc;
}

